--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.3.*
 Flask-Login==0.6.*
-Flask-Migrate==4.0.*
+Flask-Migrate==4.0.*     # if you plan to use Alembic migrations
 Flask-SQLAlchemy==3.0.*
 psycopg2-binary==2.9.*
 python-dotenv==1.0.*
 Werkzeug==2.3.*
+gunicorn==21.*
