--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Flask==2.3.*
 Flask-Login==0.6.*
-Flask-Migrate==4.0.*     # if you plan to use Alembic migrations
+Flask-Migrate==4.0.*
 Flask-SQLAlchemy==3.0.*
 psycopg2-binary==2.9.*
 python-dotenv==1.0.*
 Werkzeug==2.3.*
 gunicorn==21.*
+fingerprint-pro-server-api-sdk==6.*
